--- a/app/styles/orientdb-graphviz.css
+++ b/app/styles/orientdb-graphviz.css
@@ -1,221 +1,228 @@
 
 path.edge {
-    cursor: default;
-    stroke: #D4D6D7;
-    stroke-width: 3px;
-    fill : none;
+  cursor: default;
+  stroke: #D4D6D7;
+  stroke-width: 3px;
+  fill: none;
 }
 
 path.lightweight {
-    stroke-dasharray: 10, 2;
+  stroke-dasharray: 10, 2;
 }
 
 path.end-arrow {
-    fill: #D4D6D7;
+  fill: #D4D6D7;
 }
 
 path.start-arrow {
-    fill: #D4D6D7;
+  fill: #D4D6D7;
 }
 
 path.end-arrow-hover {
-    fill: red;
+  fill: red !important;
 }
 
 path.start-arrow-hover {
-    fill: red;
+  fill: red !important;
 }
 
 svg:not(.active):not(.ctrl) path.edge {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .vertex {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .vertex circle {
-    fill: #F25A29;
-    stroke: #DC4717;
+  fill: #F25A29;
+  stroke: #DC4717;
 }
 
 .vertex text {
-    fill: white;
+  fill: white;
 
 }
 
-text.vlabel {
-    text-anchor: middle;
-    cursor: pointer;
-    font-size: 10px;
+text.vlabel-icon {
+  text-anchor: middle;
+  cursor: pointer;
+  font-size: 10px;
 }
+text.vlabel-outside {
+  text-anchor: middle;
+  cursor: pointer;
+  font-size: 14px;
+  fill: #0a001f;
+}
+
 
 path.edge-hover {
-    stroke: red;
+  stroke: red;
 }
 
 text.elabel:hover {
-    fill: red;
+  fill: red;
 }
 
 text.elabel {
-    text-anchor: middle;
-    cursor: pointer;
-    font-size: 10px;
+  text-anchor: middle;
+  cursor: pointer;
+  font-size: 10px;
 }
 
 .selected-vertex {
-    fill: #f5F6F6;
-    stroke: rgba(151, 151, 151, 0.2);
-    stroke-width: 3px;
+  fill: #f5F6F6;
+  stroke: rgba(151, 151, 151, 0.2);
+  stroke-width: 3px;
 }
 
 .selected-vertex-none {
-    display: none;
+  display: none;
 }
 
 .menu-hide {
-    display: none;
+  display: none;
 }
 
 path.menu-path {
-    cursor: pointer;
-    fill: rgba(0, 0, 0, 0.80);
-    stroke: rgba(0, 0, 0, 0.80);
+  cursor: pointer;
+  fill: rgba(0, 0, 0, 0.80);
+  stroke: rgba(0, 0, 0, 0.80);
 }
 
 circle.selected-edge {
-    fill: rgba(0, 0, 0, 0.80);
-    stroke: rgba(0, 0, 0, 0.80);
+  fill: rgba(0, 0, 0, 0.80);
+  stroke: rgba(0, 0, 0, 0.80);
 }
 
 rect.selected-edge {
-    fill: rgba(0, 0, 0, 0.80);
-    stroke: rgba(0, 0, 0, 0.80);
+  fill: rgba(0, 0, 0, 0.80);
+  stroke: rgba(0, 0, 0, 0.80);
 }
 
 path.menu-path:hover {
-    fill: rgba(0, 0, 0);
+  fill: rgba(0, 0, 0);
 }
 
 text.menu-text {
-    text-anchor: middle;
-    fill: white;
-    cursor: pointer;
+  text-anchor: middle;
+  fill: white;
+  cursor: pointer;
 
 }
 
 text.submenu-text {
-    text-anchor: middle;
-    fill: white;
-    cursor: pointer;
-    font-size: 10px;
+  text-anchor: middle;
+  fill: white;
+  cursor: pointer;
+  font-size: 10px;
 }
 
 textPath.submenu-text {
-    text-anchor: middle;
-    fill: white;
-    cursor: pointer;
-    font-size: 10px;
+  text-anchor: middle;
+  fill: white;
+  cursor: pointer;
+  font-size: 10px;
 }
 
 .treenode {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .treenode circle {
-    fill: #fff;
-    stroke: steelblue;
-    stroke-width: 1.5px;
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
 }
 
 .treenode text {
-    font: 10px sans-serif;
+  font: 10px sans-serif;
 }
 
 .treelink {
-    fill: none;
-    stroke: #ccc;
-    stroke-width: 1.5px;
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
 }
 
 .tree-text-container {
-    fill: rgba(0, 0, 0, 0.80);
-    stroke: rgba(0, 0, 0, 0.80);
+  fill: rgba(0, 0, 0, 0.80);
+  stroke: rgba(0, 0, 0, 0.80);
 }
 
 .treenode-root {
-    display: none;
+  display: none;
 }
 
 path.enode-link {
-    fill: none;
-    stroke: #ccc;
-    stroke-width: 1.5px;
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
 }
 
 text.tree-text-menu {
-    fill: white;
+  fill: white;
 }
 
 text.tree-text-menu:hover {
-    fill: #008CBA;
+  fill: #008CBA;
 }
 
 path.dragline {
-    fill: none;
-    stroke: #000;
-    stroke-width: 4px;
-    cursor: default;
+  fill: none;
+  stroke: #000;
+  stroke-width: 4px;
+  cursor: default;
 }
 
 text.more-text:hover {
-    fill: #008CBA;
+  fill: #008CBA;
 }
 
 text.more-text {
-    fill: white;
+  fill: white;
 }
 
 rect.more-text-container {
-    fill: rgba(0, 0, 0, 0.80);
-    stroke: rgba(0, 0, 0, 0.80);
+  fill: rgba(0, 0, 0, 0.80);
+  stroke: rgba(0, 0, 0, 0.80);
 }
 
 path.emore-link {
-    fill: none;
-    stroke: #ccc;
-    stroke-width: 1.5px;
+  fill: none;
+  stroke: #ccc;
+  stroke-width: 1.5px;
 }
 
 .enode-root {
-    display: none;
+  display: none;
 }
 
 .emore-root {
-    display: none;
+  display: none;
 }
 
 .edgeMore .root rect {
-    fill: transparent;
-    stroke: transparent;
+  fill: transparent;
+  stroke: transparent;
 }
 
 .enode circle {
-    fill: rgba(0, 0, 0, 0.80);
-    stroke: rgba(0, 0, 0, 0.80);
+  fill: rgba(0, 0, 0, 0.80);
+  stroke: rgba(0, 0, 0, 0.80);
 }
 
 .emore text {
-    text-anchor: middle;
-    cursor: pointer;
-    font-size: 10px;
+  text-anchor: middle;
+  cursor: pointer;
+  font-size: 10px;
 }
 
 .enode text {
-    text-anchor: middle;
-    fill: white;
-    cursor: pointer;
+  text-anchor: middle;
+  fill: white;
+  cursor: pointer;
 }
 
 .edgeMenu {
@@ -223,7 +230,34 @@ path.emore-link {
 }
 
 .legend circle {
-    fill: #F25A29;
-    stroke: #DC4717;
+  fill: #F25A29;
+  stroke: #DC4717;
 }
 
+.svg-container {
+  display: inline-block;
+  position: relative;
+  width: 100%;
+  /* aspect ratio */
+  vertical-align: top;
+  overflow: hidden;
+}
+
+.svg-container-expanded {
+  padding-bottom: 40%;
+}
+
+.svg-container-collapsed {
+  padding-bottom: 55%;
+}
+
+.svg-content-responsive {
+  display: inline-block;
+  position: absolute;
+  top: 10px;
+  left: 0;
+}
+
+.elem-invisible {
+  display: none
+}
