--- a/app/views/database/graph/asideEdge.html
+++ b/app/views/database/graph/asideEdge.html
@@ -1,78 +1,69 @@
 <div class="container-fluid vertex-aside" ng-controller="EdgeAsideController">
-    <div class="row">
-        <ul class="nav nav-pills nav-justified nav-pills-aside">
-            <li ng-class="{active : 'properties' == active }"><a href="javascript:void(0)"
-                                                                 ng-click="active = 'properties'"
-                    ><i class="fa fa-bars"></i></a></li>
-            <!--<li ng-class="{active : 'settings' == active }"><a href="javascript:void(0)"-->
-            <!--ng-click="active = 'settings'"><i-->
-            <!--class="fa fa-cog"></i></a>-->
-            <!--</li>-->
-        </ul>
-    </div>
-    <div class="row">
-        <h5 class="text-center title-tab" ng-show="doc">
-            {{ active | capitalize}}
-        </h5>
-        <h5 class="text-center title-tab" ng-hide="doc">
-            No properties (lightweight edge)
-        </h5>
-    </div>
-    <div class="row aside-form">
+  <div class="row">
+    <ul class="nav nav-pills nav-justified nav-pills-aside">
+      <li ng-class="{active : 'properties' == active }"><a href="javascript:void(0)"
+                                                           ng-click="active = 'properties'"
+      ><i class="fa fa-bars"></i></a></li>
+      <li ng-class="{active : 'settings' == active }"><a href="javascript:void(0)"
+                                                         ng-click="active = 'settings'"><i
+        class="fa fa-cog"></i></a>
+      </li>
+    </ul>
+  </div>
+  <div class="row">
+    <h5 class="text-center title-tab" ng-show="doc">
+      {{ active | capitalize}}
+    </h5>
+    <h5 class="text-center title-tab" ng-hide="doc">
+      No properties (lightweight edge)
+    </h5>
+  </div>
+  <div class="row aside-form">
 
-        <div class="col-md-12" ng-show="active == 'properties'">
+    <div class="col-md-12" ng-show="active == 'properties'">
 
 
-            <form class="form-horizontal">
-                <div class="form-group" ng-repeat="header in headers">
-                    <label for="inputDisplay" class="col-md-4 control-label">{{header}}</label>
+      <form class="form-horizontal">
+        <div class="form-group" ng-repeat="header in headers">
+          <label for="inputDisplay" class="col-md-4 control-label">{{header}}</label>
 
-                    <div class="col-md-8">
-                        <p class="form-control-static">{{doc[header]}}</p>
-                    </div>
-                </div>
-            </form>
+          <div class="col-md-8">
+            <p class="form-control-static">{{doc[header]}}</p>
+          </div>
         </div>
-        <div class="col-md-12" ng-show="active == 'settings'">
-
-            <form class="form-horizontal">
-                <div class="form-group">
-                    <label for="inputDisplay" class="col-md-4 control-label">Display</label>
-
-                    <div class="col-md-8">
-                        <select ng-model="config.display" id="inputDisplay"
-                                ng-options="h for h in headers">
-
-                        </select>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputRadius" class="col-md-4 control-label">Radius</label>
-
-                    <div class="col-md-8">
-                        <input id="inputRadius" ng-model="config.r" class="form-control">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Fill</label>
-
-                    <div class="col-md-8">
-                        <spectrum-colorpicker
-                                ng-model="config.fill"
-                                options="{preferredFormat: 'hex'}"></spectrum-colorpicker>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Stroke</label>
-
-                    <div class="col-md-8">
-                        <spectrum-colorpicker
-                                ng-model="config.stroke"
-                                options="{preferredFormat: 'hex'}"></spectrum-colorpicker>
-                    </div>
-                </div>
-
-            </form>
-        </div>
+      </form>
     </div>
+    <div class="col-md-12" ng-show="active == 'settings'">
+
+      <form class="form-horizontal">
+        <div class="form-group">
+          <label for="inputDisplay" class="col-md-4 control-label">Display</label>
+
+          <div class="col-md-8">
+            <select ng-model="config.display" id="inputDisplay"
+                    ng-options="h for h in headers">
+
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputRadius" class="col-md-4 control-label">Stroke Width</label>
+
+          <div class="col-md-8">
+            <input id="inputRadius" ng-model="config.strokeWidth" class="form-control">
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-md-4 control-label">Stroke</label>
+
+          <div class="col-md-8">
+            <spectrum-colorpicker
+              ng-model="config.stroke"
+              options="{preferredFormat: 'hex'}"></spectrum-colorpicker>
+          </div>
+        </div>
+
+      </form>
+    </div>
+  </div>
 </div>
