--- a/app/views/database/graph/graph.html
+++ b/app/views/database/graph/graph.html
@@ -60,31 +60,41 @@
               </button>
             </div>
 
-
-            <div class="btn-group" ng-hide="fullscreen">
+            <div class="btn-group">
               <button href="javascript:void(0)"
-                      data-title="Full Screen"
+                      data-title="Fit Graph"
                       data-trigger="hover"
                       data-placement="bottom"
                       bs-tooltip
                       class="btn  btn-sm btn-default"
-                      ng-click="fullscreen = true"><i
-                class="fa fa-expand"> </i>
-
+                      ng-click="resetZoom()"><i
+                class="fa fa-arrows-alt"> </i>
               </button>
             </div>
-            <div class="btn-group" ng-show="fullscreen">
-              <button href="javascript:void(0)"
-                      data-title="Exit Full Screen"
-                      data-trigger="hover"
-                      data-placement="bottom"
-                      bs-tooltip
-                      class="btn  btn-sm btn-default"
-                      ng-click="fullscreen = false"><i
-                class="fa fa-compress"> </i>
+            <!--<div class="btn-group" ng-hide="fullscreen">-->
+            <!--<button href="javascript:void(0)"-->
+            <!--data-title="Full Screen"-->
+            <!--data-trigger="hover"-->
+            <!--data-placement="bottom"-->
+            <!--bs-tooltip-->
+            <!--class="btn  btn-sm btn-default"-->
+            <!--ng-click="fullscreen = true"><i-->
+            <!--class="fa fa-expand"> </i>-->
 
-              </button>
-            </div>
+            <!--</button>-->
+            <!--</div>-->
+            <!--<div class="btn-group" ng-show="fullscreen">-->
+            <!--<button href="javascript:void(0)"-->
+            <!--data-title="Exit Full Screen"-->
+            <!--data-trigger="hover"-->
+            <!--data-placement="bottom"-->
+            <!--bs-tooltip-->
+            <!--class="btn  btn-sm btn-default"-->
+            <!--ng-click="fullscreen = false"><i-->
+            <!--class="fa fa-compress"> </i>-->
+
+            <!--</button>-->
+            <!--</div>-->
             <div class="btn-group">
               <button href="javascript:void(0)"
                       data-title="Clear Canvas"
@@ -126,13 +136,55 @@
       <div class="card queryGraph" ng-class="additionalClass">
         <div class="row">
           <div class="col-md-12">
-            <div class="row animationQuery " ng-show="!queryClass">
+            <div class="row animationQuery graph-query" ng-show="!queryClass">
               <div class="col-md-12 box" ng-class="{ 'open' :  !queryClass }">
                 <form ng-submit="query()" class="form-inline">
                   <div ui-codemirror="editorOptions" ng-model="queryText">
 
                   </div>
                 </form>
+
+                <div class="query-info">
+                  <div class="container-fluid">
+                    <div class="row vertical-align">
+                      <div class="col-md-6  info">
+                        <div class="query-hint-mobile">
+                          <a class="btn btn-trasparent ng-scope" tabindex="1" data-trigger="focus"
+                             data-placement="bottom-left" data-animation="am-flip-x" data-container="body"
+                             data-template="views/hints/query-hint.html" bs-popover="">
+                            <i class="fa fa-question-circle"></i>
+                          </a>
+                        </div>
+                        <div class="query-hint">
+                          <div class="row">
+                            <div class="col-md-12">
+                              <b>Run:</b>
+                              Ctrl + Return
+                              <b>Undo:</b>
+                              Ctrl/Cmd + Z
+                              <b>Redo:</b>
+                              Ctrl/Cmd + Shift + Z
+                              <br>
+                              <b class="clear-hint">
+                                Search :</b>
+                              Ctrl/Cmd + F
+                              <b>
+                                Toggle Comment:</b>
+                              Ctrl/Cmd + /
+                              <b>
+                                Autocomplete:</b>
+                              Ctrl + Space
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+                      <div class="col-md-6  command">
+
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="run-container">
 
                 </div>
@@ -141,8 +193,10 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-                <div class="graph-container svg-container" ng-class="graphClass" ng-o-graph="graphOptions">
+                <div class="svg-container">
+                  <div class="graph-container svg-content-responsive" ng-class="graphClass" ng-o-graph="graphOptions">
 
+                  </div>
                 </div>
               </div>
             </div>
