--- a/app/views/database/graph/asideEdge.html
+++ b/app/views/database/graph/asideEdge.html
@@ -63,6 +63,16 @@
           </div>
         </div>
 
+        <div class="form-group">
+          <label class="col-md-4 control-label"></label>
+          <div class="col-md-8 btn-group">
+            <button href="javascript:void(0)" class="btn btn-primary btn-sm"
+                    ng-click="save()"><i
+              class="fa fa-save"> Save configuration</i>
+            </button>
+          </div>
+        </div>
+
       </form>
     </div>
   </div>
