--- a/app/views/database/graph/graph.html
+++ b/app/views/database/graph/graph.html
@@ -48,6 +48,18 @@
 
               </button>
             </div>
+
+            <!--<div class="btn-group">-->
+              <!--<button href="javascript:void(0)"-->
+                      <!--data-title="Download SVG"-->
+                      <!--data-trigger="hover"-->
+                      <!--data-placement="bottom"-->
+                      <!--bs-tooltip-->
+                      <!--class="btn btn-sm btn-default"-->
+                      <!--ng-click="download()"><i-->
+                <!--class="fa fa-download"> </i>-->
+              <!--</button>-->
+            <!--</div>-->
             <div class="btn-group">
               <button href="javascript:void(0)"
                       data-title="Add Vertex"
@@ -147,7 +159,7 @@
                 <div class="query-info">
                   <div class="container-fluid">
                     <div class="row vertical-align">
-                      <div class="col-md-6  info">
+                      <div class="col-md-12  info">
                         <div class="query-hint-mobile">
                           <a class="btn btn-trasparent ng-scope" tabindex="1" data-trigger="focus"
                              data-placement="bottom-left" data-animation="am-flip-x" data-container="body"
@@ -179,9 +191,7 @@
                         </div>
 
                       </div>
-                      <div class="col-md-6  command">
 
-                      </div>
                     </div>
                   </div>
                 </div>
