--- a/app/views/database/modalNewEdge.html
+++ b/app/views/database/modalNewEdge.html
@@ -37,13 +37,13 @@
                 </select>
               </div>
             </div>
-            <div class="form-group">
-              <label class="control-label col-md-2">Lightweight</label>
+            <!--<div class="form-group">-->
+              <!--<label class="control-label col-md-2">Lightweight</label>-->
 
-              <div class="col-md-10">
-                <input type="checkbox" ng-model="lightweight">
-              </div>
-            </div>
+              <!--<div class="col-md-10">-->
+                <!--<input type="checkbox" ng-model="lightweight">-->
+              <!--</div>-->
+            <!--</div>-->
           </form>
         </div>
         <div class="modal-footer">
