--- a/app/views/database/graph/graph.html
+++ b/app/views/database/graph/graph.html
@@ -127,12 +127,14 @@
               <ul class="dropdown-menu pull-right" role="menu">
                 <li>
                   <a href="javascript:void(0)">
-                    <i class="fa fa-search"> Hide Query</i>
+                    <i class="fa fa-search"> </i>
+                    Hide Query
                     <input type="checkbox" bs-checkbox
                            ng-model="queryClass">
                   </a></li>
                 <li><a href="javascript:void(0)"><i
-                  class="fa fa-book"> Hide Legend</i>
+                  class="fa fa-book"> </i>
+                  Hide Legend
                   <input type="checkbox" bs-checkbox
                          ng-model="hideL" ng-click="hideLegend()">
                 </a></li>
