--- a/app/views/server/general/overview.html
+++ b/app/views/server/general/overview.html
@@ -7,7 +7,7 @@
   </div>
   <div class="panel panel-default" ng-show="agentActive">
     <div class="panel-heading">
-      Server {{server.name}} CRUD Operations
+      <b> Server {{server.name}} CRUD Operations / Sec </b>
     </div>
     <div class="panel-body">
       <div id="{{server.name}}" c3chart></div>
