--- a/app/views/server/stats/stats.html
+++ b/app/views/server/stats/stats.html
@@ -9,7 +9,7 @@
     <div class="{{serverClass}}" ng-repeat="server in servers" ng-controller="SingleServerController">
       <div class="panel panel-default">
         <div class="panel-heading">
-          {{ server.name }}
+          <b>{{ server.name }}</b>
         </div>
         <div class="panel-body">
 
@@ -61,7 +61,7 @@
               </a>
             </div>
             <div class="col-md-6">
-              <b>Ops/Sec:</b> {{operations}}</span>
+              <b>CRUD Ops</b> {{operations}} /s</span>
             </div>
           </div>
 
@@ -70,12 +70,12 @@
               <b>Active Connections:</b> {{connections}}</span>
             </div>
             <div class="col-md-6">
-              <b>Network Requests:</b> {{requests}}</span>
+              <b>Network Requests:</b> {{requests}} /s</span>
             </div>
           </div>
           <div class="row">
             <div class="col-md-6">
-              <b>Average Latency:</b> {{latency}}</span>
+              <b>Average Latency:</b> {{latency}} ms</span>
             </div>
             <div class="col-md-6">
               <b>Warnings:</b> {{ tips }} </span>
@@ -89,7 +89,7 @@
     <div class="{{serverClass}}" ng-repeat="server in servers" ng-controller="SingleChartServerController">
       <div class="panel panel-default">
         <div class="panel-heading">
-          CRUD Operations {{ server.name}}
+          <b>Server {{ server.name}} CRUD Operations / Sec  </b>
         </div>
         <div class="panel-body">
           <div id="{{server.name}}" c3chart></div>
