--- a/app/views/server/stats/general.html
+++ b/app/views/server/stats/general.html
@@ -65,14 +65,15 @@
   <div class="row row-space">
     <tabset>
       <tab title="Overview" template-url="views/server/general/overview.html"></tab>
-      <tab title="Connections" template-url="views/server/general/conn.html"></tab>
+      <!--<tab title="Connections" template-url="views/server/general/conn.html"></tab>-->
+      <tab title="Monitoring" template-url="views/server/general/monitoring.html"></tab>
       <tab title="Metrics" template-url="views/server/general/metrics.html"></tab>
       <tab title="Databases" template-url="views/server/general/db.html"></tab>
       <tab title="Warnings" template-url="views/server/general/warnings.html"></tab>
       <tab title="Logs" template-url="views/server/general/log.html"></tab>
       <tab title="Plugins" template-url="views/server/general/plugins.html"></tab>
-      <tab title="Global Configuration" template-url="views/server/general/config.html"></tab>
-      <tab title="Server Configuration" template-url="views/server/general/configuration.html"></tab>
+      <tab title="Global Cfg" template-url="views/server/general/config.html"></tab>
+      <tab title="Server Cfg" template-url="views/server/general/configuration.html"></tab>
     </tabset>
   </div>
 </div>
